fix-623-aligntment-only

--- a/pages/events/events-sync.css
+++ b/pages/events/events-sync.css
@@ -1,3 +1,9 @@
 /****  start imports  ********************************/
 @import "../../styles/global.css";
 /****  end imports  ********************************/
+
+@layer base {
+    .title-display {
+        padding-bottom: 0rem;
+    }
+}
